# ynix_b

./: .flake8  .gitignore  Procfile  README.md  __init__.py  __main__.py  main.py  poetry_init.txt  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: codeql.yml  label.yml
archive/: calc_v4.py
data/: __init__.py  class_die.csv  party_spots.csv  pve_data.py  pvp_mods.py  solo_spots.csv
data/PvE/: __init__.py  party_spots.csv  pve_data.py  solo_spots.csv  spot_types.csv
data/PvP/: warrior_vs.csv
data/character_classes/: Archer.py  Berserker.py  Corsair.py  Dark_Knight.py  Drakania.py  Guardian.py  Lahn.py  Maegu.py  Mystic.py  Ninja.py  Nova.py  Ranger.py  Sage.py  Sorceress.py  Valkyrie.py  Woosa.py  __init__.py  class_data.py  weapon_die.toml
data/gear/: weapon_die.csv
db/: __init__.py  connection.py  example-env.toml  queries.py  seed.py
functions/: __init__.py  calc_v5.py
functions/calc/: __init__.py  calc_ap.py  calc_die.py  calc_dr.py
models/: __init__.py  attacker_model.py  defender_model.py  float_id.py  int_id.py
scratch/: rng.ipynb  zone_data.ipynb
scripts/: New-Stubs.ps1
src/: Attacker.py  Defender.py  __init__.py  calc_v4.py  calc_v5.py
src/API/: __init__.py  alt_calc.py  calc.py  calc_v4.py  demo_math.py  main.py  old_calc.py
src/DB/: connection.py  queries.py  seed.py
src/DB/data/: __init__.py
src/DB/data/PvE/: pve_data.py
src/DB/data/character_classes/: Archer.py  Dark_Knight.py  Hashashin.py  Kuno.py  Maewha.py  Musa.py  Mystic.py  Shai.py  Striker.py  Tamer.py  Valkyrie.py  Warrior.py  Witch.py  Wizard.py  class_data.py
src/calc/: calc_ap.py  calc_die.py  calc_dr.py
testing/: calc_archive.py  calc_v3.py
tests/: __init__.py  payload.json  test_calc.py
