[tool.poetry]
name = "ynix_b"
version = "0.0.1"
description = "Web Server for Project_Ynix"
authors = ["Josh S Wilkinson <joshswilkinson@outlook.com>"]
license = "MIT"
packages = [{ include = "data" }, { include = "db" }, { include = "functions" }]

[tool.poetry.dependencies]
python = ">=3.10.7"
pendulum = "^2.1.2"
fastapi = "^0.100.0"
psycopg = "^3.1.9"
uvicorn = "^0.23.1"
python-dotenv = "^0.20.0"
ujson = "^5.8.0"
numpy = "^1.25.1"
pandas = "^2.0.3"
psycopg-binary = "^3.1.9"
python-multipart = "^0.0.6"
pydantic = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start_dev = 'main:server.run'
seed_dev = 'db:seed.run_seed'
test_calc = 'tests:test_calc.run_calc_test'
